--- a/templates/composer.json.tmpl
+++ b/templates/composer.json.tmpl
@@ -24,6 +24,7 @@
   },
   "config": {
     "bin-dir": "bin/",
+    "classmap-authoritative": true,
     "optimize-autoloader": true
   },
   "suggest": {
