Updated the README.

--- a/templates/composer.json.tmpl
+++ b/templates/composer.json.tmpl
@@ -3,6 +3,7 @@
   "license": "Apache-2.0",
   "minimum-stability": "dev",
   "prefer-stable": true,
+  "readme": "README.md",
   "require": {
     "php": ">=7.2",
     "psr/log": "^1.1",
