--- a/templates/Makefile-DOCKER_VARS.tmpl
+++ b/templates/Makefile-DOCKER_VARS.tmpl
@@ -1,6 +1,8 @@
 PHP_LAST=7.2
 PHP_CURR=7.3
-PHP_NEXT=7.4
+
+PHP_LAST_EXT_DATE=20170718
+PHP_CURR_EXT_DATE=20180731
 
 BUILD_DOCKER=docker build --compress --force-rm --squash
 BUILD_COMPOSE=docker-compose build --pull --compress --parallel
