--- a/templates/PHPUNIT-FILTER.tmpl
+++ b/templates/PHPUNIT-FILTER.tmpl
@@ -1,5 +1,5 @@
     <filter>
         <whitelist processUncoveredFilesFromWhitelist="true">
-            <directory suffix=".php">./src/</directory>
+            <directory suffix=".php">src</directory>
         </whitelist>
     </filter>
