--- a/templates/PSALM-VENDOR.tmpl
+++ b/templates/PSALM-VENDOR.tmpl
@@ -7,6 +7,7 @@
         <ContinueOutsideLoop><errorLevel type="suppress"><directory name="vendor" /></errorLevel></ContinueOutsideLoop>
         <DeprecatedClass><errorLevel type="suppress"><directory name="vendor" /></errorLevel></DeprecatedClass>
         <DeprecatedConstant><errorLevel type="suppress"><directory name="vendor" /></errorLevel></DeprecatedConstant>
+        <DeprecatedFunction><errorLevel type="suppress"><directory name="vendor" /></errorLevel></DeprecatedFunction>
         <DeprecatedInterface><errorLevel type="suppress"><directory name="vendor" /></errorLevel></DeprecatedInterface>
         <DeprecatedMethod><errorLevel type="suppress"><directory name="vendor" /></errorLevel></DeprecatedMethod>
         <DeprecatedProperty><errorLevel type="suppress"><directory name="vendor" /></errorLevel></DeprecatedProperty>
