--- a/templates/composer.json.tmpl
+++ b/templates/composer.json.tmpl
@@ -28,11 +28,13 @@
     "squizlabs/php_codesniffer": "dev-master",
     "thecodingmachine/phpstan-strict-rules": "^0.11.2",
     "vimeo/psalm": "^3.4",
-    "wapmorgan/php-code-analyzer": "^1.0",
+    "wapmorgan/php-code-analyzer": "^1.0"
+  },
   "config": {
     "bin-dir": "bin/",
     "classmap-authoritative": true,
-    "optimize-autoloader": true,
+    "optimize-autoloader": true
+  },
   "suggest": {
     "monolog/monolog": "A high-quality PSR-3 logging library.",
     "bramus/monolog-colored-line-formatter": "Color-codes your Monolog messages by severity."
