Tweaks to configs.

--- a/templates/README-BADGES.tmpl
+++ b/templates/README-BADGES.tmpl
@@ -12,8 +12,7 @@
 [![Travis branch](https://img.shields.io/travis/simplepie/@@REPO@@/master.svg?style=for-the-badge&label=Travis%20CI)](https://travis-ci.org/simplepie/@@REPO@@)
 [![Coveralls](https://img.shields.io/coveralls/github/simplepie/@@REPO@@/master.svg?style=for-the-badge)](https://coveralls.io/github/simplepie/@@REPO@@)
 [![Code Quality](http://img.shields.io/scrutinizer/g/simplepie/@@REPO@@.svg?style=for-the-badge&label=Scrutinizer)](https://scrutinizer-ci.com/g/simplepie/@@REPO@@)
-[![SensioLabs Insight](https://img.shields.io/sensiolabs/i/@@INSIGHT@@.svg?style=for-the-badge&label=SensioLabs%20Insight)](https://insight.sensiolabs.com/projects/@@INSIGHT@@)
-[![Codacy](https://img.shields.io/codacy/grade/@@CODACY@@/master.svg?style=for-the-badge&label=Codacy)](https://www.codacy.com/app/simplepie/@@REPO@@)
+[![Symfony Insight](https://img.shields.io/sensiolabs/i/@@INSIGHT@@.svg?style=for-the-badge&label=Symfony%20Insight)](https://insight.symfony.com/projects/@@INSIGHT@@)
 
 ### Social
 
