--- a/templates/PHPUNIT-HEADER.tmpl
+++ b/templates/PHPUNIT-HEADER.tmpl
@@ -1,12 +1,14 @@
 <phpunit
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/4.1/phpunit.xsd"
+    xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/latest/phpunit.xsd"
     bootstrap="tests/bootstrap.php"
+    cacheResult="true"
     colors="true"
     convertErrorsToExceptions="true"
     processIsolation="false"
     stopOnError="false"
     stopOnFailure="false"
     stopOnIncomplete="false"
+    stopOnRisky="false"
     stopOnSkipped="false"
     verbose="true">
