--- a/templates/composer.json.tmpl
+++ b/templates/composer.json.tmpl
@@ -7,7 +7,7 @@
   "require": {
     "php": ">=7.2",
     "psr/log": "^1.1",
-    "simplepie/utility-pack": "dev-master"
+    "simplepie/utility-pack": "^2.2"
   },
   "require-dev": {
     "bramus/monolog-colored-line-formatter": "^3.0",
